minor changes on section-1

--- a/main.html
+++ b/main.html
@@ -60,6 +60,12 @@
       </div>
       <img src="main-section-svgs/asset 55.svg" alt="" class="curves">
     </section>
-    <div class="test"></div>
+    <!-- ----------------------------------section2------------------------------------- -->
+    <section class="sec2">
+      <h2>Comprehensive learning programs
+        & classes for all students</h2>
+        <p class="title">Become lifelong learners with India's best teachers,
+          engaging video lessons and personalised learning journeys</p>
+    </section>
 </body>
 </html>
