--- a/main.html
+++ b/main.html
@@ -49,8 +49,9 @@
       <hr class="hr4">
 
       <form action="">
+        
         <input class="input" type="text" placeholder="Enter Name of your Child">
-        <input class="input" type="text" placeholder="Enter your Mobile Number">
+        <input class="input" type="number" placeholder="Enter your Mobile Number">
         <button class="OTP"> Send OTP</button>
         <input class="input" type="text" placeholder="Enter Address">
         <input class="input" type="text" placeholder="State">
