creating the card

--- a/main.html
+++ b/main.html
@@ -67,6 +67,33 @@
         & classes for all students</h2>
         <p class="title">Become lifelong learners with India's best teachers,
           engaging video lessons and personalised learning journeys</p>
+
+       <div class="card-class-4">
+        <div class="left">
+          <div class="img">
+            <img src="" alt="">
+          </div>
+          <div class="text">
+          <img src="" alt="">
+          <p>Personalised learning app
+            to learn anytime, anywhere</p>
+            <h4>Know more > </h4>
+          </div>
+        </div>
+       <div class="middle"></div>
+       <div class="right">
+        <div class="img">
+          <img src="" alt="">
+        </div>
+        <div class="text">
+        <img src="" alt="">
+        <p>Personalised learning app
+          to learn anytime, anywhere</p>
+          <h4>Know more > </h4>
+        </div>
+         </div>
+       </div>
+
     </section>
 </body>
 </html>
