card making in the section-2

--- a/main.html
+++ b/main.html
@@ -7,8 +7,7 @@
    <link rel="stylesheet"  href="main.css">
 
    <!-- -------------------ionicons------------------------ -->
-   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <!-- -------------------------------------------------------------- -->
   </head>
   <body>
@@ -50,7 +49,7 @@
 
       <form action="">
         
-        <input class="input" type="text" placeholder="Enter Name of your Child">
+        <input class="input" type="text" placeholder="Enter Name of your Child" >
         <input class="input" type="number" placeholder="Enter your Mobile Number">
         <button class="OTP"> Send OTP</button>
         <input class="input" type="text" placeholder="Enter Address">
@@ -69,29 +68,34 @@
           engaging video lessons and personalised learning journeys</p>
 
        <div class="card-class-4">
+        <ion-icon name="triangle" class="triangle"></ion-icon>
+            <p class="new">NEW</p>
+        <p class="class-4">Classes 4 - 10</p>
         <div class="left">
           <div class="img">
-            <img src="" alt="">
+            <img src="card.svgs/btla.png" alt="">
           </div>
           <div class="text">
-          <img src="" alt="">
+          <img src="card.svgs/byjus_learningapp_logo.svg" alt="">
           <p>Personalised learning app
             to learn anytime, anywhere</p>
             <h4>Know more > </h4>
           </div>
         </div>
-       <div class="middle"></div>
+       <div class="line"></div>
        <div class="right">
         <div class="img">
-          <img src="" alt="">
+          <img src="card.svgs/byjus-classes-tutor-img.png" alt="">
         </div>
         <div class="text">
-        <img src="" alt="">
-        <p>Personalised learning app
-          to learn anytime, anywhere</p>
+        <img src="card.svgs/byjus_classes_2_line_logo.png" alt="">
+        <p>Personalised online tutoring
+          program with a unique two
+          teacher model</p>
           <h4>Know more > </h4>
         </div>
          </div>
+         <button class="free-class"> book a FREE class</button>
        </div>
 
     </section>
