cards of section-2

--- a/main.html
+++ b/main.html
@@ -97,7 +97,49 @@
          </div>
          <button class="free-class"> book a FREE class</button>
        </div>
+<!-- -------------------- -->
+
+       <div class="card-class-5">
+        <p class="class-5">JEE/NEET</p>
+        <div class="left">
+          <img class="jee-img" src="card.svgs/jeeTeaching.png" alt="">
+          <p>Comprehensive learning program for JEE preparation</p>
+          <button class="Explore-jee-button">Explore JEE</button>
+        </div>
+       <div class="line-2"><img  class="akash-logo" src="card.svgs/Akash.png">
+       </div>
+       <div class="right">
+          <img class="neet-img" src="card.svgs/neet_teaching_web.png" alt="">
+          <p>Comprehensive learning program for NEET aspirants</p>
+          <button class="Explore-neet-button">Explore NEET</button>
+        </div>
+         </div>
+
+         <div class="card-class-6">
+          <div class="left-card-class-6">
+            <p class="class-6">Classes LKG-3</p>
+            <div class="card-class-6-left-img" ><img src="card.svgs/byjus_early_learn_characters_2024.webp"></div>
+            <div class="card-class-6-left-text">
+              <img class="byjus-early-logo" src="card.svgs/byjus_early_learn_logo_2024.webp" alt="">
+              <p>Specially crafted early learning program for young minds</p>
+              <button class="card-6-button">Explore</button>
+            </div>
+          </div>
+          <div class="right-card-class-6">
+            <p class="class-6">IAS</p>
+            <div class="card-class-6-right-img" ><img src="card.svgs/IAS.png"></div>
+            <div class="card-class-6-right-text">
+              <img src="card.svgs/bj-ias-icon.svg" alt="">
+              <p>Personalised learning program for the leaders of tomorrow</p>
+              <button class="card-6-button">Explore</button>
+            </div>
+          </div>
+         </div>
+  
+       </div>
 
     </section>
+    
+    
 </body>
 </html>
